--- a/FrontEnd/mood-melody/src/index.css
+++ b/FrontEnd/mood-melody/src/index.css
@@ -24,7 +24,7 @@ h2, h3{
 }
 
 /* Estilos para el Header */  
-header {  
+Header {  
   background: var(--navy-blue);   
   display: flex;  
   flex-direction: column;  
@@ -124,7 +124,7 @@ section img:hover {
 
 }
 
-footer {  
+.Footer {  
   text-align: center;  
   padding: 10px 0;  
   background: #35424a;  
@@ -134,41 +134,27 @@ footer {
   width: 100%;  
 }
 
-.login .singup{
-  display: flex;  
-  justify-content: center;  
-  align-items: center; 
-}
-
 /* Recomendations */ 
 .alegre {  
-  background-color: #FFD700; /* Dorado */  
   background-color: #FFD700;   
   color: #000;  
 }  
 
-.reflexivo {  
-  background-color: #D3D3D3; /* Gris claro */  
+.reflexivo {   
   background-color: #D3D3D3;   
   color: #000; 
 }  
 
 .relajado {  
-  background-color: #B0E0E6; /* Azul pálido */  
   background-color: #5c90e3;  
   color: #000; 
 }  
 
-.romantico {  
-  background-color: #FFB6C1; /* Rosa claro */  
-  color: #000;  
 .romántico {  
   background-color: #f12951;  
   color: #fff;  
 }  
 
-Energetico {  
-  background-color: #FF6347; /* Tomate */  
 .enérgico {  
   background-color: #FF6347;  
   color: #fff;  
@@ -195,7 +181,6 @@ Energetico {
 
 /* Estilo para el nombre de la playlist */  
 .playlist-name {  
-  display: block; /* Fuerza el span a iniciar en una nueva línea */  
   display: block;   
   margin-top: 8px;  
   text-decoration: underline;  
