--- a/FrontEnd/mood-melody/src/index.css
+++ b/FrontEnd/mood-melody/src/index.css
@@ -134,7 +134,7 @@ section img:hover {
   width: 100%;  
 }
 
-/* Recomendations */ 
+/* Recommendations */ 
 .alegre {  
   background-color: #FFD700;   
   color: #000;  
